@@ -17,18 +17,35 @@
 			.globl	launch
 
 /*
- * change stack pointer and call function (with four arguments)
+ * change stack pointer and call function (with two arguments)
  *
  * this isn't necessary for calling the kernel, but it's handy
  * to be able to load and run other ELF images that can then
  * return to the shell
+ *
+ * arguments:
+ *	uint64_t	new stack pointer
+ *	uint64_t	function address
+ *	uint64_t	arg #1
+ *	uint64_t	arg #2
  */
 
 launch:			move	t8, sp
-			move	t9, a1
-			subu	sp, a0, 64
 
-			sw	t8, 52(sp)
+			li	t9, 1
+			dsll	t9, t9, 32
+			dsubu	t9, t9, 1	// t9 - 0000.0000.ffff.ffff
+
+			dsll	a1, a1, 32	// a1.a0 - new stack pointer
+			dsll	a3, a3, 32	// a3.a2 - function address
+			and	a0, a0, t9
+			and	a2, a2, t9
+			or	a0, a0, a1
+			or	t9, a2, a3
+
+			dsubu	sp, a0, 64	// load new stack pointer (allocating space for context)
+
+			sw	t8, 52(sp)	// save context
 			sw	ra, 60(sp)
 			sw	fp, 56(sp)
 			sw	gp, 48(sp)
@@ -41,15 +58,13 @@ launch:			move	t8, sp
 			sw	s1, 20(sp)
 			sw	s0, 16(sp)
 
-			move	a0, a2
-			move	a1, a3
-			lw	a2, 16(t8)
-			lw	a3, 20(t8)
+			ld	a0, 16(t8)	// fetch arguments from original stack
+			ld	a1, 24(t8)
 
-			jal	t9
+			jal	t9		// go do the thing
 			 move	gp, zero
 
-			lw	s0, 16(sp)
+			lw	s0, 16(sp)	// restore context
 			lw	s1, 20(sp)
 			lw	s2, 24(sp)
 			lw	s3, 28(sp)
